--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ packages = find:
 # packagae_data = var/**/*
 include_package_data = True
 install_requires =
+    virtualenv
 
 [options.entry_points]
 console_scripts =
