fix acre cli module name.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = acre-tools
+name = acre-cli
 version = 0.0.2
-description='the acre tools'
+description='the acre cli'
 
 [options]
 packages = find:
@@ -12,7 +12,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    acre = acre.acre:main
+    acre = acrecli.acre:main
 
 [wheel]
 universal=1
