refactor greenhouse-cli.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = acre-cli
-version = 0.0.2
+version = 0.0.3a1
 description='the acre cli'
 
 [options]
@@ -8,11 +8,10 @@ packages = find:
 # packagae_data = var/**/*
 include_package_data = True
 install_requires =
-    virtualenv
 
 [options.entry_points]
 console_scripts =
-    acre = acrecli.acre:main
+    acre = acre.cli.acre:main
 
 [wheel]
 universal=1
