--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     - name: run acre-tests
       run: |
         cd acre-test
-        acre run --noterm features/*
+        acre run --noterm features/
         
       
 
