--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
 
     - uses: actions/checkout@v3
       with:
-        name: acre-bdd/acre-test
+        repository: acre-bdd/acre-test
         path: acre-test
     
     - name: install and initialize acre cli
