Add dependency to DevOpAPI.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description='the acre cli'
 packages = find:
 # packagae_data = var/**/*
 include_package_data = True
-install_requires =
+install_requires = DevOpsAPI
 
 [options.entry_points]
 console_scripts =
