use acrelib for logging.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,8 @@ description='the acre cli'
 packages = find:
 # packagae_data = var/**/*
 include_package_data = True
-install_requires = DevOpsAPI
+install_requires = file: requirements.txt
+    
 
 [options.entry_points]
 console_scripts =
